kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-prod
  labels:
    name: app-prod
