kubernetes/psql.yaml
apiVersion: v1
kind: Pod
metadata:
  name: psql-client
  namespace: app-prod
spec:
  containers:
    - name: psql-client
      image: postgres:15
      command: ["sleep", "infinity"]
  tolerations:
    - key: "app"
      operator: "Equal"
      value: "true"
      effect: "NoSchedule"
  restartPolicy: Never
