kubernetes/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc
  namespace: app-prod
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
    - port: 27017
