kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: idempiere-lb
  namespace: app-prod
  labels:
    app: idempiere
spec:
  type: LoadBalancer
  selector:
    app: idempiere
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9090
    - name: http-alt
      protocol: TCP
      port: 4000
      targetPort: 4000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 9443
